--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,15 +1,8 @@
 ---
-import { RecipeCard } from '~/components/index.svelte';
+import Recipes from '~/components/Recipes.svelte';
 import Layout from '~/layouts/Layout.astro';
 ---
 
 <Layout title="S-Recpies">
-    <div class="w-2/3 grid grid-cols-3 gap-10">
-        <RecipeCard />
-        <RecipeCard />
-        <RecipeCard />
-        <RecipeCard />
-        <RecipeCard />
-        <RecipeCard />
-    </div>
+    <Recipes client:idle />
 </Layout>
