--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -20,7 +20,7 @@ const { title } = Astro.props;
 	</head>
 	<body>
         <Nav />
-        <main class="pt-20 px-6">
+        <main class="py-20 px-6">
             <slot />
         </main>
         <Spa
