--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,5 +4,6 @@ import Layout from '~/layouts/Layout.astro';
 ---
 
 <Layout title="S-Recpies">
+    <a href="/recipe/9y9f4tune4lyhnk">RECIPE</a>
     <Recipes client:idle />
 </Layout>
