Poppins font and home link in navbar

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,6 +1,8 @@
 ---
+import '@fontsource/poppins';
 import { Spa } from 'astro-spa';
 import { Nav } from '~/components/index.svelte';
+import './global.css';
 
 export interface Props {
 	title: string;
