--- a/src/layouts/global.css
+++ b/src/layouts/global.css
@@ -1,3 +1,11 @@
 body {
     font-family: Poppins;
 }
+
+input[data-error='true'] {
+    @apply border-red-500;
+}
+
+span[data-error='true'] {
+    @apply opacity-100;
+}
