--- a/src/pages/login.astro
+++ b/src/pages/login.astro
@@ -1,18 +1,15 @@
 ---
 import Layout from '~/layouts/Layout.astro';
+import Sign from '~/layouts/Sign.astro';
 import { Forms } from '~/partials/index.svelte';
 
 const cookie = Astro.request.headers.get('cookie') ?? '';
 
-if(/pb_auth/.test(cookie)) {
+if (/pb_auth/.test(cookie)) {
     return Astro.redirect('/');
 }
 ---
 
-<Layout title="Login" noNav={true}>
-    <div
-        class="absolute top-1/2 -translate-y-1/2 w-full place-items-center grid"
-    >
-        <Forms.Login client:idle />
-    </div>
-</Layout>
+<Sign title="Sign in">
+    <Forms.Login client:idle />
+</Sign>
