--- a/src/layouts/Sign.astro
+++ b/src/layouts/Sign.astro
@@ -21,7 +21,9 @@ const { title } = Astro.props;
     </head>
     <body>
         <div class="absolute top-0 left-0 w-full min-h-screen flex">
-            <div class="w-1/2 bg-stone-400 grid place-items-center text-white">
+            <div
+                class="hidden md:grid w-1/2 bg-stone-400 place-items-center text-white"
+            >
                 <a
                     href="/"
                     class="hover:text-stone-200 text-xl transition-colors flex items-center gap-2 absolute top-8 left-8"
