--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -26,6 +26,6 @@ const { title, noNav } = Astro.props;
         <main class="py-20 px-6">
             <slot />
         </main>
-        <Spa defaultAnimation={false} progressBar={false} />
+        <Spa defaultAnimation={false} progressBar={false} delay={300} />
     </body>
 </html>
